GeneWeb version 3.08
--------------------

* GeneWeb Service/CGI (gwd)
   - [25 Aug 00] In history, added the ability to see the changes only
     by a given wizard.
   - [24 Aug 00] Fixed bug: when entering Web addresses (http://...)
     in notes, it generates enclosing HTML code to make links, but
     sometimes it did it incorrectly. For example the image insertion
     <img src=...>? did not work because the program changed it into
     <img src=<a href=http://...>>

* GeneWeb data bases Transfer Program (gwtp)
  - [22 Aug 00] Fixed bug: worked only if the CGI name was gwtp (could not
    be gwtp.cgi, for example). Fixed also the distribution: template files
    used by gwtp (3 files ending with .txt) were not installed. Fixed also
    a problem: when downloading a file, the proposed name for the file was
    not the good one (a trick was used but worked only with Netscape, not
    IE); changed the same thing for images in gwd.

* Documentation:
  - [21 Aug 00] Added an entry in the FAQ about people having "?" (question
    mark) as first name and/or surname.

GeneWeb version 3.07
--------------------

* New feature
  - [18 Aug 00] Added a program "gwtp" (CGI) to upload and download GeneWeb
    data bases in a site which accomodate some (undocumented program for the
    moment).

* Distribution
  - [18 Aug 00] Create files named README.htm and LISEZMOI.htm instead
    of README.txt and LISEZMOI.txt.

* GeneWeb Service/CGI (gwd)
  - [16 Aug 00] In personal pages, does not display the age at death
    if less than one year and undefined month/day (it displayed "age at
    death: birth"!)
  - [14 Aug 00] In personal pages, sources are now printed, even for
    non friends, non wizards.
  - [11 Aug 00] In first names by alphabetic order for a given surname, now
    always specify the parents' names.
  - [09 Aug 00] Fixed a problem of missing space after "married to" in
    descendants page (did not happen with all browsers).